--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "clean": "rm -rf dist",
     "build": "npm -s run clean && tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --detectOpenHandles"
   },
   "author": "",
   "license": "ISC",
@@ -15,7 +15,12 @@
     "tslib": "^2.1.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.13.10",
+    "@babel/preset-typescript": "^7.13.0",
     "@types/ioredis": "^4.22.0",
+    "@types/jest": "^26.0.20",
+    "jest": "^26.6.3",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   }
 }
