--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "prepublishOnly": "npm run test",
     "clean": "rm -rf dist",
     "build": "npm -s run clean && tsc",
-    "test": "jest --detectOpenHandles --forceExit --coverage",
+    "test": "jest --detectOpenHandles --forceExit --coverage --coverageProvider=v8",
     "patch": "npm version patch"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "ioredis": "^4.23.0",
+    "ms": "^2.1.2",
     "tslib": "^2.1.0"
   },
   "devDependencies": {
@@ -23,6 +24,7 @@
     "@babel/preset-typescript": "^7.13.0",
     "@types/ioredis": "^4.22.0",
     "@types/jest": "^26.0.20",
+    "@types/ms": "^0.7.31",
     "jest": "^26.6.3",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
@@ -35,6 +37,6 @@
     "url": "git://github.com/jonashoyer/redis-cache.git"
   },
   "publishConfig": {
-    "registry":"https://npm.pkg.github.com"
+    "registry": "https://npm.pkg.github.com"
   }
 }
