--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@jonashoyer/redis-cache",
+  "name": "@jonashoyer/lucid-cache",
   "version": "0.2.0",
   "description": "",
   "main": "lib/index.js",
@@ -34,7 +34,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/jonashoyer/redis-cache.git"
+    "url": "git://github.com/jonashoyer/lucid-cache.git"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
